--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  height: 100%;
+  background-color: #0000;
+  color-scheme: dark;
+}
